Added pdf and updated notebook

--- a/Read_a_pdf_page.ipynb
+++ b/Read_a_pdf_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "24076a52-4d99-4125-ac34-fda75b47904b",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "2516d646-7bdc-4a65-84e2-8a359e9373d0",
    "metadata": {},
    "outputs": [],
@@ -32,9 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "56f0a998-9d27-453c-a24d-7ba451430c05",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#open pdf\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "465d90db-4233-4306-86a5-dc28bc789464",
    "metadata": {},
    "outputs": [],
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "f9d87eba-ace9-40cc-b9c0-033090c9d20f",
    "metadata": {},
    "outputs": [
@@ -62,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<PyPDF2._page._VirtualList object at 0x000001E6F1115F10>\n"
+      "<PyPDF2._page._VirtualList object at 0x0000025BFFCAC810>\n"
      ]
     }
    ],
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "297c0e72-4766-4dce-a843-b17a256bdd09",
    "metadata": {},
    "outputs": [],
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "4f356a62-8e2f-412e-be15-cb93e34dd559",
    "metadata": {},
    "outputs": [
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "7da5c9a4-641a-4266-b4aa-a17de705df8b",
    "metadata": {},
    "outputs": [],
@@ -111,14 +113,6 @@
     "#close the pdf\n",
     "pdf.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b98730fc-1a4e-410e-954a-7503c12954db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
