Added Collecting data from word file

--- a/Read_a_pdf_page.ipynb
+++ b/Read_a_pdf_page.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9c53a736-3757-466d-b9f7-ac249016340d",
+   "metadata": {},
+   "source": [
+    "<h1>Collecting Data from PDFs</h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "24076a52-4d99-4125-ac34-fda75b47904b",
